@@ -590,6 +590,9 @@ BUGFIXES:
   ZOOKEEPER-1904. WatcherTest#testWatchAutoResetWithPending is failing
   (Rakesh R via michim)
 
+  ZOOKEEPER-1725. Zookeeper Dynamic Conf writes out hostnames when IPs are
+  supplied (Alexander Shraer via michim)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-1170. Fix compiler (eclipse) warnings: unused imports,
